# nwmsense

./: .clang-format  .gitignore  README.md  meson.build
src/: comp_output.c  comp_output.h  comp_server.c  comp_server.h  comp_xdg_shell.c  comp_xdg_shell.h  main.c  nwm_server.c  nwm_server.h  output.c  output.h  xdg_shell.c  xdg_shell.h
src/input/: cursor.c  cursor.h  input.c  input.h  keyboard.c  keyboard.h  seat.c  seat.h
